# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
gendiff/: __init__.py  cli.py  generate_diff.py  parser.py
gendiff/formatters/: __init__.py  set_format.py
gendiff/modules/: calculate_diff.py  engine.py  formatter.py  generate_diff.py  generate_diff_2.py  parser.py  root.py  set_format.py  stylish.py
gendiff/modules/formats/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: result_json.json  result_json.txt
